[gd_scene load_steps=2 format=2]

[ext_resource path="res://registergame.gd" type="Script" id=1]

[node name="registergame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="maillabel" type="Label" parent="."]
margin_left = 20.0
margin_top = 50.0
margin_right = 60.0
margin_bottom = 64.0
text = "mail"

[node name="LineEdit2" type="LineEdit" parent="maillabel"]
margin_left = -20.0
margin_top = 14.0
margin_right = 89.0
margin_bottom = 38.0

[node name="passwordlabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 100.0
margin_right = 70.0
margin_bottom = 114.0
text = "password"

[node name="LineEdit3" type="LineEdit" parent="passwordlabel"]
margin_left = -10.0
margin_top = 20.0
margin_right = 99.0
margin_bottom = 44.0

[node name="Button" type="Button" parent="."]
margin_left = 10.0
margin_top = 210.0
margin_right = 100.0
margin_bottom = 230.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Label" type="Label" parent="."]
margin_top = 160.0
margin_right = 113.0
margin_bottom = 174.0
text = "password confirm"

[node name="LineEdit" type="LineEdit" parent="Label"]
margin_top = 14.0
margin_right = 109.0
margin_bottom = 38.0

[node name="namelabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="LineEdit" type="LineEdit" parent="namelabel"]
margin_right = 109.0
margin_bottom = 30.0
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
